--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.swaraj.Dictionary.SplashActivity"
+        <activity
+            android:name=".SplashActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,16 +19,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.swaraj.Dictionary.DictionaryMainActivity" />
+        <activity android:name=".DictionaryMainActivity" />
         <activity
-            android:name="com.example.swaraj.Dictionary.SettingsActivity"
+            android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="com.example.swaraj.Dictionary.DictionaryMainActivity">
+            android:parentActivityName=".DictionaryMainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.swaraj.Dictionary.DictionaryMainActivity"
-                />
+                android:value="com.example.swaraj.Dictionary.DictionaryMainActivity" />
         </activity>
+        <activity android:name=".QuizActivty"/>
+
+        <service
+            android:name=".MyService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
